// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button aria-label="Aria label" data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</section>"
`;

exports[`checkbox > renders with class correctly 1`] = `
"<div data-slot="root" class="inline-flex">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with defaultValue correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with description correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label</label>
    <p data-slot="description" class="">Description</p>
  </div>
</div>"
`;

exports[`checkbox > renders with description slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Description slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with disabled correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-disabled="" disabled="">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with icon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with id correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="id" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indeterminate correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indeterminateIcon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="mixed" aria-required="false" data-state="indeterminate"><span data-state="indeterminate" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indicator end correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indicator hidden correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with indicator start correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with label correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with label slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with modelValue correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with name correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with neutral variant card correctly 1`] = `
"<label data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`checkbox > renders with neutral variant card highlight correctly 1`] = `
"<label data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`checkbox > renders with neutral variant list correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with neutral variant list highlight correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with primary variant card correctly 1`] = `
"<label data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`checkbox > renders with primary variant card highlight correctly 1`] = `
"<label data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</label>"
`;

exports[`checkbox > renders with primary variant list correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with primary variant list highlight correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with required correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="true" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`checkbox > renders with size lg correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size md correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size sm correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size xl correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with size xs correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with trueValue/falseValue as number correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with trueValue/falseValue as string correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked"><span data-state="checked" style="pointer-events: none;" data-slot="indicator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with trueValue/falseValue unchecked correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`checkbox > renders with value correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
      <!---->
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;
